--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -7,15 +7,26 @@ security:
             algorithm: auto
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: username
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
-
+            provider: app_user_provider
+            form_login:
+                login_path: app_login
+                check_path: app_login
+                username_parameter: _username
+                password_parameter: _password
+                enable_csrf: true
+            logout:
+                path: app_logout
+                target: /login
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
@@ -25,8 +36,11 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+            - { path: ^/admin, roles: ROLE_ADMIN }
+            - { path: ^/profile, roles: ROLE_USER }
+              # Empêcher l'accès à la création des tâches si l'utilisateur n'est pas connecté
+            - { path: ^/tasks/create, roles: ROLE_USER }
+            
 
 when@test:
     security:
