--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -5,6 +5,8 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
         App\Entity\User:
             algorithm: auto
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_USER]
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         app_user_provider:
