--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!-- https://phpunit.readthedocs.io/en/latest/configuration.html -->
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
          backupGlobals="false"
@@ -24,18 +23,18 @@
     </testsuites>
 
     <coverage processUncoveredFiles="true">
-        <include>
-            <directory suffix=".php">src</directory>
-        </include>
+        <filter>
+            <whitelist>
+                <directory suffix=".php">src/</directory>
+                <exclude>
+                    
+                    <directory>src/DataFixtures/Dev</directory>>
+                </exclude>
+            </whitelist>
+        </filter>
     </coverage>
 
     <listeners>
         <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
     </listeners>
-
-    <!-- Uncomment when adding extensions
-    <extensions>
-    </extensions>
-    -->
-    
 </phpunit>
