fix some minor pbs for quality code

--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,9 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "fix": "php-cs-fixer fix"
+
     },
     "conflict": {
         "symfony/symfony": "*"
