--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "symfony/twig-bundle": "5.4.*",
         "symfony/validator": "5.4.*",
         "symfony/var-exporter": "6.2",
-        "symfony/yaml": "5.4.*"
+        "symfony/yaml": "5.4.*",
+        "twig/twig": "3.14.1"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.6",
